2005-04-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Init/Services.pm: added, previously known as service.pl.in
	* service.pl.in: removed
	* ServicesList.pm: added, DBus object for accessing services at init
	* Loader.pl.in: added ServicesList
	* SharesList.pm: updated to latest DBus bindings api
	* network.pl.in: use Init::Services
	* test-backends: don't recurse infinitely with arrays, other
	improvements

2005-04-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* test-backends: Added simple perl script for querying the backends 
	data

2005-04-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Utils/Monitor.pm: New file for monitoring file changes and emitting
	DBus signals according to this
	* Loader.pl.in: added function for monitoring files in a timeout
	* SharesList.pm: monitor SMB and NFS files and emit "changed" signal
	* Shares/Exports.pm: misc changes

2005-04-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Loader.pl.in: Added, this will be the application that will load all
	the backend objects, instead of being each backend an executable
	* SharesList.pm: Added, this is the DBus object for the shared folders
	list, at the moment it only does SMB (First DBus object here, wooo)
	* network.pl.in: misc changes for making object work, it will be
	eventually moved to Network/*.pm
	* Shares/Exports.pm: new place for share.pl.in
	* Utils/Backend.pm: added vars for the DBus path and so
	* TODO: Added
	* shares.pl.in: to the attic with you

2005-04-19  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Third round of huge commits
	* parse.pl.in: removed
	* Utils/Parse.pm: new place for the file above, plus function renaming
	* boot-conf.in, boot-grub.pl.in, boot-lilo.pl.in, boot-yaboot.pl.in,
	boot-pl.in, dhcpd.pl.in, disks-conf.in, filesys.pl.in, ishare.pl.in,
	media.pl.in, network.pl.in, print.pl.in, service.pl.in, share.pl.in,
	shares-conf.in, time-conf.in, users-conf.in, Utils/Backend.pm,