@@ -2,7 +2,7 @@ AC_PREREQ(2.52)
 dnl ==============================================================
 dnl Process this file with autoconf to produce a configure script.
 dnl ==============================================================
-AC_INIT(system-tools-backends,1.2.0)
+AC_INIT(system-tools-backends,1.9.0)
 AC_CONFIG_AUX_DIR(.)
 AC_CONFIG_HEADERS(config.h)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
@@ -41,7 +41,7 @@ AC_OUTPUT([
 Makefile
 m4macros/Makefile
 po/Makefile.in
-system-tools-backends.pc
+system-tools-backends-2.0.pc
 files/Makefile
 boot-conf
 dhcpd-conf
